--- a/styles/sass/imports/sections/_about.scss
+++ b/styles/sass/imports/sections/_about.scss
@@ -88,4 +88,11 @@
       }
     }
   }
+
+  .about-us {
+
+    .persons {
+      grid-template-columns: repeat(auto-fill, 100%);
+    }
+  }
 }
